--- a/internal/site/src/locales/es/es.po
+++ b/internal/site/src/locales/es/es.po
@@ -363,6 +363,14 @@ msgstr "Creado"
 msgid "Critical (%)"
 msgstr "Crítico (%)"
 
+#: src/components/routes/system/network-sheet.tsx
+msgid "Cumulative Download"
+msgstr "Descarga acumulativa"
+
+#: src/components/routes/system/network-sheet.tsx
+msgid "Cumulative Upload"
+msgstr "Carga acumulativa"
+
 #. Context: Battery state
 #: src/components/routes/system.tsx
 msgid "Current state"
@@ -441,6 +449,10 @@ msgstr "Abajo"
 msgid "Down ({downSystemsLength})"
 msgstr "Abajo ({downSystemsLength})"
 
+#: src/components/routes/system/network-sheet.tsx
+msgid "Download"
+msgstr "Descargar"
+
 #: src/components/alerts-history-columns.tsx
 msgid "Duration"
 msgstr "Duración"
@@ -452,6 +464,7 @@ msgstr "Editar"
 
 #: src/components/login/auth-form.tsx
 #: src/components/login/forgot-pass-form.tsx
+#: src/components/login/otp-forms.tsx
 msgid "Email"
 msgstr "Correo electrónico"
 
@@ -471,6 +484,10 @@ msgstr "Ingrese la dirección de correo electrónico para restablecer la contras
 #: src/components/routes/settings/notifications.tsx
 msgid "Enter email address..."
 msgstr "Ingrese dirección de correo..."
+
+#: src/components/login/otp-forms.tsx
+msgid "Enter your one-time password."
+msgstr "Ingrese su contraseña de un solo uso."
 
 #: src/components/login/auth-form.tsx
 #: src/components/routes/settings/alerts-history-data-table.tsx
@@ -541,6 +558,12 @@ msgstr "Por <0>{min}</0> {min, plural, one {minuto} other {minutos}}"
 #: src/components/login/auth-form.tsx
 msgid "Forgot password?"
 msgstr "¿Olvidó su contraseña?"
+
+#: src/components/add-system.tsx
+#: src/components/routes/settings/tokens-fingerprints.tsx
+msgctxt "Button to copy install command"
+msgid "FreeBSD command"
+msgstr "Comando FreeBSD"
 
 #. Context: Battery state
 #: src/lib/i18n.ts
@@ -645,6 +668,7 @@ msgid "Manage display and notification preferences."
 msgstr "Administrar preferencias de visualización y notificaciones."
 
 #: src/components/add-system.tsx
+#: src/components/routes/settings/tokens-fingerprints.tsx
 msgid "Manual setup instructions"
 msgstr "Instrucciones manuales de configuración"
 
@@ -680,6 +704,8 @@ msgid "Network traffic of docker containers"
 msgstr "Tráfico de red de los contenedores de Docker"
 
 #: src/components/routes/system.tsx
+#: src/components/routes/system/network-sheet.tsx
+#: src/components/routes/system/network-sheet.tsx
 msgid "Network traffic of public interfaces"
 msgstr "Tráfico de red de interfaces públicas"
 
@@ -714,6 +740,10 @@ msgstr "Soporte para OAuth 2 / OIDC"
 #: src/components/routes/settings/config-yaml.tsx
 msgid "On each restart, systems in the database will be updated to match the systems defined in the file."
 msgstr "En cada reinicio, los sistemas en la base de datos se actualizarán para coincidir con los sistemas definidos en el archivo."
+
+#: src/components/login/auth-form.tsx
+msgid "One-time password"
+msgstr "Contraseña de un solo uso"
 
 #: src/components/routes/settings/tokens-fingerprints.tsx
 #: src/components/routes/settings/tokens-fingerprints.tsx
@@ -833,6 +863,14 @@ msgstr "Lectura"
 msgid "Received"
 msgstr "Recibido"
 
+#: src/components/login/login.tsx
+msgid "Request a one-time password"
+msgstr "Solicitar contraseña de un solo uso"
+
+#: src/components/login/otp-forms.tsx
+msgid "Request OTP"
+msgstr "Solicitar OTP"
+
 #: src/components/login/forgot-pass-form.tsx
 msgid "Reset Password"
 msgstr "Restablecer Contraseña"
@@ -887,10 +925,6 @@ msgstr "Enviado"
 #: src/components/routes/settings/general.tsx
 msgid "Set percentage thresholds for meter colors."
 msgstr "Establecer umbrales de porcentaje para los colores de los medidores."
-
-#: src/components/routes/settings/general.tsx
-msgid "Sets the default time range for charts when a system is viewed."
-msgstr "Establece el rango de tiempo predeterminado para los gráficos cuando se visualiza un sistema."
 
 #: src/components/command-palette.tsx
 #: src/components/command-palette.tsx
@@ -1002,6 +1036,10 @@ msgstr "Rendimiento de {extraFsName}"
 msgid "Throughput of root filesystem"
 msgstr "Rendimiento del sistema de archivos raíz"
 
+#: src/components/routes/settings/general.tsx
+msgid "Time format"
+msgstr "Formato de hora"
+
 #: src/components/routes/settings/notifications.tsx
 msgid "To email(s)"
 msgstr "A correo(s)"
@@ -1033,6 +1071,14 @@ msgstr "Los tokens permiten que los agentes se conecten y registren. Las huellas
 #: src/components/routes/settings/tokens-fingerprints.tsx
 msgid "Tokens and fingerprints are used to authenticate WebSocket connections to the hub."
 msgstr "Los tokens y las huellas digitales se utilizan para autenticar las conexiones WebSocket al hub."
+
+#: src/components/routes/system/network-sheet.tsx
+msgid "Total data received for each interface"
+msgstr "Datos totales recibidos por cada interfaz"
+
+#: src/components/routes/system/network-sheet.tsx
+msgid "Total data sent for each interface"
+msgstr "Datos totales enviados por cada interfaz"
 
 #: src/lib/alerts.ts
 msgid "Triggers when 1 minute load average exceeds a threshold"
@@ -1094,6 +1140,10 @@ msgstr "Activo"
 #: src/components/systems-table/systems-table.tsx
 msgid "Up ({upSystemsLength})"
 msgstr "Activo ({upSystemsLength})"
+
+#: src/components/routes/system/network-sheet.tsx
+msgid "Upload"
+msgstr "Cargar"
 
 #: src/components/routes/system.tsx
 msgid "Uptime"
